// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mono renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      undefined,
      Object {
        "fontFamily": "space-mono",
      },
    ]
  }
>
  Snapshot test!
</Text>
`;

exports[`Poppins renders correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#553555",
        "fontFamily": "poppins",
      },
      undefined,
      undefined,
    ]
  }
>
  Snapshot test!
</Text>
`;
